creacion de empleado, style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visite + React</title>
   </head>
@@ -10,5 +11,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <h1>Bienvenido al sistema de Gestion de RRHH</h1>
+    <ul class="menu" id="menu">
+      <li><a class="active" href="/index.html">Inicio</a></li>
+      <li><a class="active1" href="/empleado.html">Empleado</a></li>
+    </ul>
   </body>
 </html>
