--- a/empleado.html
+++ b/empleado.html
@@ -12,7 +12,7 @@
     <h1>Sección Empleado</h1>
     <ul class="menu" id="menu">
         <li><a class="active" href="/index.html">Inicio</a></li>
-        <li><a class="active1" href="/empleado.html">Sobre mi</a></li>
+        <li><a class="active1" href="/empleado.html">Empleado</a></li>
       </ul>
 </body>
 </html>
