--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Bienvenido al sistema de Gestion de RRHH</h1>
     <ul class="menu" id="menu">
       <li><a class="active" href="/index.html">Inicio</a></li>
-      <li><a class="active1" href="/empleado.html">Empleado</a></li>
+      <li><a class="active1" href="/empleado.html">Empleados</a></li>
     </ul>
   </body>
 </html>
