Se separo en carpetas a index, empleado y roles

--- a/Home/index.html
+++ b/Home/index.html
@@ -11,9 +11,16 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <h1>Bienvenido al sistema de Gestion de RRHH</h1>
-    <ul class="menu" id="menu">
-      <li><a class="active" href="/index.html">Inicio</a></li>
-      <li><a class="active1" href="/empleado.html">Empleados</a></li>
-    </ul>
+    <h2>Inicie sesión</h2>
+    <form>
+      Usuario: <br>
+      <input type="text" name="username">
+      <br>
+      Contraseña: <br>
+      <input type="password" name="password">
+      <br>
+      <br>
+      <input id="btn-submit" type="submit" value="Ingresar">
+    </form>
   </body>
 </html>
