--- a/empleado/empleado.html
+++ b/empleado/empleado.html
@@ -11,8 +11,8 @@
     <script type="module" src="/src/main.jsx"></script>
     <h1>Sección Empleado</h1>
     <ul class="menu" id="menu">
-        <li><a class="active" href="/index.html">Inicio</a></li>
-        <li><a class="active1" href="/empleado.html">Empleado</a></li>
+        <li><a class="active" href="/Home/index.html">Inicio</a></li>
+        <li><a class="active1" href="/empleado/empleado.html">Empleado</a></li>
       </ul>
 </body>
 </html>
