--- a/Home/index.html
+++ b/Home/index.html
@@ -3,24 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" /> <!--NO SE ME ESTA VISUALIZANDO LA PAG CON EL CSS-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visite + React</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <h1>Bienvenido al sistema de Gestion de RRHH</h1>
+    <h1>Bienvenido al Sistema de Gestion de RR.HH</h1>
     <h2>Inicie sesión</h2>
     <form>
-      Usuario: <br>
-      <input type="text" name="username">
-      <br>
-      Contraseña: <br>
-      <input type="password" name="password">
-      <br>
-      <br>
-      <input id="btn-submit" type="submit" value="Ingresar">
+      <label for="usuario">Usuario:</label>
+            <input type="text" id="usuario" name="usuario" required>
+
+            <label for="contraseña">Contraseña:</label>
+            <input type="password" id="contraseña" name="contraseña" required>
+
+            <button type="submit">Ingresar</button>
     </form>
   </body>
 </html>
