--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://img.freepik.com/vector-premium/icono-linea-gestion-recursos-humanos_116137-1486.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/d4c04a1274.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <title>Gestión del Capital Humano</title>
   </head>
   <body>
     <div id="root"></div>
